# sd-forge-civitai-assistant

./: README.md  install.py  pyproject.toml  styles.css
civitai_assistant/: api.py  const.py  logger.py  ui.py  update.py
civitai_assistant/type/: __init__.py  civitai.py  models.py
civitai_assistant/utils/: errors.py  files.py  logger.py  sd_path.py
lib_civitaiassistant/: file_utils.py  helper.py  rest.py  types.py
lib_civitaiassistant/types/: __init__.py  civitai.py  models.py  result.py
lib_civitaihelper/: types.py  utils.py
scripts/: civitai_assistant.py  civitai_helper.py
tests/civitai_assistant/: test_api.py
tests/utils/: test_files.py
